Updated IDE config

--- a/qa/.classpath
+++ b/qa/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-logging-processor.jar"/>
 	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-logging.jar"/>
+	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-transaction-api_1.2_spec.jar"/>
 	<classpathentry excluding="org/jboss/jbossts/qa/astests/taskdefs/ASTestConfig.java|org/jboss/jbossts/qa/astests/taskdefs/ServerTask.java|org/jboss/jbossts/qa/astests/taskdefs/ASClientTask.java|org/jboss/jbossts/qa/astests/taskdefs/ClientAction.java|org/jboss/jbossts/qa/astests/ASCrashRecovery01/|org/jboss/jbossts/qa/astests/crash/" kind="src" path="tests/src"/>
 	<classpathentry kind="src" path="tests/build/idl"/>
 	<classpathentry kind="lib" path="ext/ant.jar"/>
@@ -18,7 +19,6 @@
 	<classpathentry kind="lib" path="dbdrivers/postgresql-8.3-605.jdbc4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/a jboss-transaction-spi"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/aa org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/arjuna"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/arjunacore"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/arjunacore-services"/>
