--- a/pom.xml
+++ b/pom.xml
@@ -403,7 +403,8 @@
     
     <!-- External dependencies versions -->
     <jboss-as.version>9.0.0.Alpha1-SNAPSHOT</jboss-as.version>
-    <version.org.wildfly.core>1.0.0.Alpha3</version.org.wildfly.core>
+    <version.org.wildfly.core>1.0.0.Alpha5</version.org.wildfly.core>
+    <version.org.wildfly.build-tools>1.0.0.Alpha2</version.org.wildfly.build-tools>
     <version.org.wildfly.arquillian>1.0.0.Alpha1</version.org.wildfly.arquillian>
     <version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>1.0.0.Final</version.org.jboss.spec.javax.jms.jboss-jms-api_2.0_spec>
     <version.org.jboss.jandex>1.1.0.Final</version.org.jboss.jandex>
