--- a/ArjunaJTA/jdbc/pom.xml
+++ b/ArjunaJTA/jdbc/pom.xml
@@ -45,6 +45,7 @@
             <exclude>**/utils/plugins/**</exclude>
             <exclude>**/DBPlugin.java</exclude>
             <exclude>**/*JNDISetup.java</exclude>
+            <exclude>**/*SimpleJdbcTest.java</exclude>
           </excludes>
         </configuration>
       </plugin>
@@ -62,6 +63,18 @@
       <artifactId>jboss-transaction-api_1.2_spec</artifactId>
       <version>${version.org.jboss.spec.javax.transaction}</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-transaction-spi</artifactId>
+      <version>${version.org.jboss.jboss-transaction-spi}</version>
+      <scope>provided</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>org.jboss.logging</groupId>
+          <artifactId>jboss-logging-spi</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.jboss.narayana.jta</groupId>
@@ -86,6 +99,20 @@
       <version>${version.org.jboss.logging.jboss-logging-processor}</version>
       <scope>provided</scope>
     </dependency>
+    		<dependency>
+			<groupId>org.apache.tomcat</groupId>
+			<artifactId>catalina</artifactId>
+			<version>6.0.33</version>
+			<scope>test</scope>
+		</dependency>
+				<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>3.2.2.RELEASE</version>
+			<scope>test</scope>
+		</dependency>
+		
+    
   </dependencies>
   <profiles>
     <profile>
