--- a/qa/.classpath
+++ b/qa/.classpath
@@ -1,9 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-logging-processor.jar"/>
-	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-logging.jar"/>
-	<classpathentry kind="lib" path="dist/narayana-full-5.0.3.Final-SNAPSHOT/lib/ext/jboss-transaction-api_1.2_spec.jar"/>
-	<classpathentry excluding="org/jboss/jbossts/qa/astests/taskdefs/ASTestConfig.java|org/jboss/jbossts/qa/astests/taskdefs/ServerTask.java|org/jboss/jbossts/qa/astests/taskdefs/ASClientTask.java|org/jboss/jbossts/qa/astests/taskdefs/ClientAction.java|org/jboss/jbossts/qa/astests/ASCrashRecovery01/|org/jboss/jbossts/qa/astests/crash/" kind="src" path="tests/src"/>
+	<classpathentry excluding="org/jboss/jbossts/qa/astests/taskdefs/ASTestConfig.java|org/jboss/jbossts/qa/astests/taskdefs/ServerTask.java|org/jboss/jbossts/qa/astests/taskdefs/ASClientTask.java|org/jboss/jbossts/qa/astests/taskdefs/ClientAction.java|org/jboss/jbossts/qa/astests/ASCrashRecovery01/|org/jboss/jbossts/qa/astests/crash/|org/jboss/jbossts/qa/astests/" kind="src" path="tests/src"/>
 	<classpathentry kind="src" path="tests/build/idl"/>
 	<classpathentry kind="lib" path="ext/ant.jar"/>
 	<classpathentry kind="lib" path="ext/emma_ant.jar"/>
@@ -18,49 +15,55 @@
 	<classpathentry kind="lib" path="dbdrivers/oracle_10_2_0_4/ojdbc14.jar"/>
 	<classpathentry kind="lib" path="dbdrivers/postgresql-8.3-605.jdbc4.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/a jboss-transaction-spi"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/arjuna"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/arjunacore"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/arjunacore-services"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/bridge"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/byteman_support"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/cdi"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/common"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/idlj-idl"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jacorb-idl"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jboss-transaction-spi-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jbosstxbridge"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jbossxts"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jdbc"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jta"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jtax"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/jts"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/localjunit-crash-recovery-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/localjunit-unit-tests"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/narayana-jta"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/narayana-jts-idlj"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/narayana-jts-integration"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/narayana-jts-jacorb"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/orbportability"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/recovery"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/restat-api"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/restat-bridge"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/restat-integration"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/restat-util"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/restat-web"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/service"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/stm"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/txframework"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/txoj"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ws-c11"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/ws-t11"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wsas"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wscf11"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wstf-sc007-interop"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wstx11"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/wstx11-interop"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xts-test-servlet"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/xtstest"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/test-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/a org.wildfly.wildfly-transactions"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/a setCheckedActionFactoryExample"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.arjunacore.arjuna"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.arjunacore.arjunacore"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.arjunacore.arjunacore-services"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.arjunacore.txoj"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.common"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jbosstxbridge"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jta.cdi"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jta.jdbc"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jta.jta"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jta.narayana-jta"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jta.narayana-spi"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.ibmorb-idl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.idlj-idl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.jacorb-idl"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.jtax"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.jts"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.narayana-jts-ibmorb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.narayana-jts-idlj"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.narayana-jts-integration"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.narayana-jts-jacorb"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.jts.orbportability"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.osgi.narayana-osgi-jta"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.rts.restat-api"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.rts.restat-bridge"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.rts.restat-integration"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.rts.restat-util"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.rts.restat-web"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.stm.stm"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.test-utils"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.txframework.txframework"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.bridge"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.byteman_support"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.jbossxts"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.localjunit-crash-recovery-tests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.localjunit-unit-tests"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.recovery"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.service"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.ws-c11"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.ws-t11"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wsas"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wscf11"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wstf-sc007-interop"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wstx11"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.wstx11-interop"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.xts-test-servlet"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/org.jboss.narayana.xts.xtstest"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/a org.jboss.spec.javax.transaction.jboss-transaction-api_1.2_spec"/>
+	<classpathentry kind="lib" path="/org.jboss.narayana.jts.jts/target/test-classes"/>
 	<classpathentry kind="output" path="tests/build/classes/"/>
 </classpath>
