JBTM-2311 Added JBoss Logging processor jars during compile phase

--- a/STM/pom.xml
+++ b/STM/pom.xml
@@ -61,6 +61,12 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.jboss.logging</groupId>
+      <artifactId>jboss-logging-processor</artifactId>
+      <version>${version.org.jboss.logging.jboss-logging-processor}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <version>${version.com.h2database}</version>
